# multi_ardrone_sim

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: limits.yaml  limits10.yaml  limits20.yaml  markers.yaml  namespaces.yaml
launch/: aruco_markers.launch  aruco_world.launch  bag_poses.launch  empty.launch  main.launch  motion.launch  single_parrot.launch  world.launch
msg/: avoid.msg  posevector.msg
plots/matlab_plots/: CountLevels.m  CountLevelsCumulative.m  Multireplay.m  ProbD.m  ProbDist.m  areascript.m  compareKCov.m  compareKCov.m~  compareProb.m  compareProb.m~  domain.m  foo.m  kcoverage.m  mergeBags.m  mergeBags2.m  mergeBags2.m~  mergeMAT.m~  multiplotAvoid.m  multiplotAvoid.m~  plotAvoid.m  plotAvoid.m~  plotCountLevels.m  plotCountLevels.m~  plotCoverage.m  plotPersistCoverage.m  plotPersistCoverage.m~  plotX.m  plotmulti.m  plotmulti.m~  procData.m  procData.m~  replay.m  replayspecial.m
src/: AvoidTimes.cpp  altcontrol.cpp  aruco_localization.cpp  avoid_times.cpp  clock.cpp  ctrl_velocity.cpp  flocking.cpp  getPose.cpp  land.cpp  landall.cpp  levy_controller.cpp  potential_field.cpp  rectVel.cpp  reynolds.cpp  supervisor.cpp  supervisor_real.cpp  takeoff.cpp
worlds/: aruco_world.world  empty.world
worlds/textures/: aruco_00010.material  aruco_000248.material  aruco_00026.material  aruco_00070.material  aruco_00114.material  aruco_00157.material  aruco_00203.material  aruco_00310.material  aruco_00353.material  aruco_00392.material  aruco_00432.material  aruco_00472.material  aruco_00514.material  aruco_00558.material  aruco_00598.material  aruco_00658.material  aruco_00722.material  aruco_00789.material  aruco_00822.material  aruco_00861.material  aruco_00901.material  aruco_00930.material  aruco_00962.material  aruco_01002.material  aruco_01022.material
