<?xml version="1.0"?>
<package>
  <name>multi_ardrone_sim</name>
  <version>0.1.1</version>
  <description>multi_ardrone_sim</description>

  <maintainer email="hs20@hw.ac.uk">Hugo Sardinha</maintainer>
  <author email="hs20@hw.ac.uk">Hugo Sardinha</author>
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo_msgs</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rosbag</build_depend>
  
  <run_depend>rosbag</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>tf2_msgs</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

 
  <run_depend>catkin</run_depend>

</package>
